# outline-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  dist.toml  server.json  smithery.yaml
.github/workflows/: release.yml
crates/outline-mcp/: Cargo.toml
crates/outline-mcp-core/: Cargo.toml
crates/outline-mcp-core/src/: lib.rs
crates/outline-mcp-core/src/application/: eject.rs  error.rs  mod.rs  service.rs
crates/outline-mcp-core/src/domain/: error.rs  mod.rs  repository.rs
crates/outline-mcp-core/src/domain/model/: book.rs  changelog.rs  id.rs  mod.rs  node.rs  timestamp.rs
crates/outline-mcp-core/src/infra/: ai_store_changelog.rs  changelog_bridge.rs  changelog_store.rs  json_store.rs  mod.rs  snapshot.rs  snapshot_migrator.rs  snapshot_sink.rs
crates/outline-mcp-core/tests/: integration.rs  property.rs  snapshots.rs
crates/outline-mcp-core/tests/common/: mod.rs
crates/outline-mcp-core/tests/snapshots/: snapshots__json_subtree_implementation.snap  snapshots__markdown_subtree_design.snap
crates/outline-mcp-rmcp/: Cargo.toml
crates/outline-mcp-rmcp/docs/guides/: snapshot-workflow.md
crates/outline-mcp-rmcp/src/: helpers.rs  lib.rs  request.rs  resources.rs  server.rs  tools.rs
crates/outline-mcp/src/: cli.rs  main.rs
crates/outline-mcp/src/interface/mcp/: helpers.rs  mod.rs  request.rs  resources.rs  tools.rs
src/: main.rs
src/application/: eject.rs  error.rs  mod.rs  service.rs
src/domain/: error.rs  repository.rs
src/domain/model/: book.rs  changelog.rs  id.rs  mod.rs  node.rs
src/infra/: changelog_store.rs  json_store.rs  mod.rs  snapshot.rs
src/interface/: mcp.rs
src/interface/mcp/: helpers.rs  mod.rs  request.rs  resources.rs  tools.rs
tests/: integration.rs  property.rs  snapshots.rs
tests/common/: mod.rs
tests/snapshots/: snapshots__json_full.snap  snapshots__markdown_full.snap  snapshots__markdown_no_placeholders.snap
