[workspace]
resolver = "2"
members = ["crates/outline-mcp-core", "crates/outline-mcp-rmcp", "crates/outline-mcp"]

[workspace.package]
version = "0.9.0"
edition = "2021"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/outline-mcp"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
schemars = "1.2"
