[package]
name = "outline-mcp-rmcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "rmcp (MCP) interface layer for outline-mcp: ServerHandler, tool_router, and stdio transport wiring over outline-mcp-core"
keywords = ["mcp", "outline", "checklist", "tree"]
categories = ["command-line-utilities"]

[dependencies]
outline-mcp-core = { path = "../outline-mcp-core", version = "0.11.0" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
similar = "2"
ai-store-core = "0.9"
ai-store-sqlite = "0.9"
ai-store-sync = "0.9"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
