[package]
name = "outline-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-structured session guide & checklist as an MCP server"
keywords = ["mcp", "outline", "checklist", "tree"]
categories = ["command-line-utilities"]

[dependencies]
outline-mcp-rmcp = { path = "../outline-mcp-rmcp", version = "0.10.1" }
outline-mcp-core = { path = "../outline-mcp-core", version = "0.10.1" }
tokio = { workspace = true }
anyhow = { workspace = true }
