[package]
name = "outline-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-structured session guide & checklist as an MCP server"
keywords = ["mcp", "outline", "checklist", "tree"]
categories = ["command-line-utilities"]

[package.metadata.dist]
# cargo-dist-specific optional metadata. Formula field controls the generated
# Homebrew Formula name (defaults to crate name; set explicitly for clarity).
formula = "outline-mcp"

[dependencies]
outline-mcp-rmcp = { path = "../outline-mcp-rmcp", version = "0.11.0" }
outline-mcp-core = { path = "../outline-mcp-core", version = "0.11.0" }
tokio = { workspace = true }
anyhow = { workspace = true }
